# sales_report

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yaml
.streamlit/: config.toml
src/: main.py
src/pages/: pg_admin_panel.py  pg_dashboard.py  pg_etl_process.py  pg_user_panel.py
