[project]
name = "sales-report"
version = "0.1.0"
description = "sales report app"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "pandas>=2.3.0",
    "streamlit>=1.45.1",
]

[project.urls]
Homepage = "https://github.com/coffeeisoxygen/sales_report"
