[project]
name = "sales-report"
dynamic = ["version"]
description = "Sales Report Dashboard - ETL and Analytics Tool"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "pandas>=2.3.0",
    "streamlit>=1.45.1",
]

[project.urls]
Homepage = "https://github.com/coffeeisoxygen/sales_report"

[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = { find = { where = ["."], include = ["src*"] } }

[tool.setuptools_scm]
write_to = "src/_version.py"
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"
fallback_version = "0.1.0"
